Complete BE integration and trip lifecycle APIs